updated project name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "we-are-friends",
+  "name": "We-Are-Friends",
   "version": "1.0.0",
   "description": "A Social Network API",
   "main": "index.js",
