--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "express": "^4.19.2",
+    "moment": "^2.30.1",
     "mongoose": "^8.3.2"
   },
   "devDependencies": {
